--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,7 +44,7 @@ p::first-letter {
 }
 
 .mainMenu {
-	margin-top: 72px;
+	margin-top: -62px;
 }
 
 /* Region of flag of Rio Grande do Sul*/
@@ -75,9 +75,31 @@ p::first-letter {
 	-webkit-background-size: cover;
 	background-size: cover;
 	background-position: 0 -120px;
-	margin-top: 28px;
+	margin-top: 21px;
 }
 
+/*--- Social media bar -----*/
+
+.socialMedia {
+	margin: 10px 40px 0 0;
+	display: inline-block;
+	background: transparent;
+}
+
+.socialMedia a {
+	text-decoration: none;
+}
+
+.socialMedia a img {
+	width: 32px;
+	height: 32px;
+	display: inline-block;
+}
+
+.socialMedia a img:hover{
+	background: #D6AA28;
+	border-radius: 100%;
+}
 /*--------- News ------------ */
 
 .lastNews-bg {
@@ -86,7 +108,6 @@ p::first-letter {
 	width: 100%;
 	display: inline-block;
 }
-
 
 ul#latestNews {
 	margin: 0;
@@ -168,6 +189,7 @@ ul#latestNew li a img {
 	color: #fff;
 }
 
+/*--------- Video Section --------- */
 .video {
 	display: inline-block;
 	margin-top: 10%;
